Fix white border of cards in dark mode

--- a/site/assets/css/base.scss
+++ b/site/assets/css/base.scss
@@ -336,10 +336,7 @@ body.dark {
 	}
 
 	.card {
-		border-color: $dark-dp-16
-	}
-
-	.card-body {
+		border-color: $dark-dp-16;
 		background-color: $dark-dp-1;
 	}
 
